# zbox-browser

./: .gitignore  .gitmodules  .npmignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  webpack.config.js
.cargo/: config
js/: index.js  message.js  utils.js  worker.js
scripts/: build-wasm.sh  build.sh  release.js  release.sh  start.sh
src/: cache_backend.js  index.js  lib.rs  logger.js  message.js  polyfill.rs  utils.js  worker.js  worker_logger.js
src/wasm/: .gitignore  .npmignore  zbox.d.ts  zbox.js  zbox_bg.d.ts  zbox_bg.wasm
test/: index.html  zbox_test.js
tests/: index.html  web.rs  zbox_test.js
zbox_wasm/: Cargo.toml
