[package]
name = "zbox_wasm"
description = "ZboxFS WASM binding"
version = "0.1.0"
authors = ["Zbox.io"]
categories = ["wasm"]
readme = "README.md"
repository = "https://github.com/zboxfs/zbox-browser"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
log = "0.4.6"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
js-sys = { version = "0.3.27" }
web-sys = { version = "0.3.27", features = ["Crypto", "WorkerGlobalScope", "XmlHttpRequest", "XmlHttpRequestResponseType", "Blob"] }

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }

zbox = { version = "0.8.6", features = ["storage-zbox"] }

[dev-dependencies]
wasm-bindgen-test = "0.2.50"
