[package]
name = "zbox_wasm"
version = "0.1.0"
description = "ZboxFS WASM binding"
authors = ["Zbox.io"]

[lib]
name = "zbox_wasm"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
log = "0.4.6"
zbox = { version = "0.8.3", features = ["storage-zbox"] }
wasm-bindgen = { version = "0.2.47", features = ["serde-serialize"] }
js-sys = { version = "0.3.24" }
web-sys = { version = "0.3.24", features = ["Crypto", "WorkerGlobalScope", "XmlHttpRequest", "XmlHttpRequestResponseType", "Blob"] }
wee_alloc = { version = "0.4.4" }
